2013-11-28  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Use PROCENV_LINUX_BSD_KERNEL rather than raw define value for
	    kFreeBSD systems.
	  - Tweaks to hide NUMA from BSD systems.
	  - usage(): Added missing entry for --memory (as caught by new test).
	* src/procenv.h:
	  - Added PROCENV_LINUX_BSD_KERNEL for kFreeBSD systems.
	* src/tests/check_all_args.in:
	  - New test to ensure that all sections generated by default output
	    have a corresponding command-line option.

2013-11-27  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Check for libnuma.
	* man/procenv.1:
	  - Updated date.
	  - Add -Y/--memory.
	* src/procenv.c:
	  - show_misc(): Memory page size moved to show_memory().
	  - show_memory(): New function.
	  - dump():
	    - Added missing call to show_cpu().
	    - Added call to show_memory().
	  - show_numa_memory(): New function to display NUMA details (LP: #1251209).
	* src/procenv.h: Bumped PROCENV_FORMAT_VERSION.
	* src/tests/check_all_args.in:
	  - Check explicitly for xmlwf.
	  - Added test to ensure all options produce output in default output
	    mode too.

2013-11-22  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: show_cpu_affinities(): New function that displays basic
	  CPU affinity details.
	* man/procenv.1: Correct and add additional references for '--cpu'.

2013-11-13  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - Fixes for unimplemented FreeBSD output:
	    - show_shared_mem_bsd()
	    - show_semaphores_bsd()
	    - show_msg_queues_bsd()
	* src/tests/check_all_args.in:
	  - Use mktemp(1) instead of Debian/Ubuntu-specific tempfile(1).
	  - Remove rogue xmlwf call in '--format=text' test.
	  - Fix for the unhelpful xmlwf: unlike every other Unix utility, xmlwf
	    returns 0, even on failure (!) so we have to check if output is
	    produced...

2013-11-07  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: get_arch(): Added PPC64.

2013-11-01  James Hunt  <james.hunt@ubuntu.com>
